<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RentHouse</string>
    <string name="title_activity_my_properties">MyProperties</string>
    <string name="title_activity_create_login">CreateLoginAct</string>

    <!-- Dialogs -->
    <string name="common_dialog_ok">OK</string>

    <!-- HomeScreenFg Common -->
    <string name="fg_homescreen_buy">Buy</string>
    <string name="fg_homescreen_rent">Rent</string>
    <string name="fg_homescreen_for_buy">For Buy</string>
    <string name="fg_homescreen_for_rent">For Rent</string>
    <string name="fg_homescreen_properties">My Properties</string>
    <string name="fg_homescreen_jobs">My Jobs</string>
    <string name="fg_homescreen_favorites">My Favorites</string>
    <string name="fg_homescreen_profile">Profile</string>
    <string name="fg_homescreen_exit">Exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- PropertyFiltersFg -->
    <string-array name="fg_propertyFilters_category">
        <item name="default">Property category</item>
    </string-array>

    <!-- SignUpFg -->
    <string name="fg_signup_spinnerPrompt">Select type</string>
    <string name="fg_signup_emptyfields">All fields required</string>
    <string name="fg_signup_notEqualPasswords">Passwords are not equal</string>

    <string-array name="fg_signup_type">
        <item name="user">User</item>
        <item name="agent">Agent</item>
    </string-array>

    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileAct</string>

</resources>
