<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="gr.mc_anastasiou.renthouse.HomeScreenFg"
    android:background="@color/theme_background">

    <Button
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginRight="@dimen/home_buttons_vertical_margin"
        android:layout_marginBottom="@dimen/home_buttons_horizontal_margin"
        android:text="@string/fg_homescreen_buy"
        android:textSize="16sp"
        android:drawableTop="@drawable/house"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:clickable="true"
        android:background="@drawable/homescreen_button"
        android:id="@+id/fg_homescreen_buy" />

    <Button
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginLeft="@dimen/home_buttons_vertical_margin"
        android:layout_marginBottom="@dimen/home_buttons_horizontal_margin"
        android:drawableTop="@drawable/house"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:background="@drawable/homescreen_button"
        android:text="@string/fg_homescreen_rent"
        android:clickable="true"
        android:id="@+id/fg_homescreen_sell"
        android:layout_toRightOf="@id/fg_homescreen_buy" />

    <Button
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_below="@id/fg_homescreen_buy"
        android:layout_marginRight="@dimen/home_buttons_vertical_margin"
        android:layout_marginBottom="@dimen/home_buttons_horizontal_margin"
        android:drawableTop="@drawable/house"
        android:text="@string/fg_homescreen_properties"
        android:textSize="16sp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:background="@drawable/homescreen_button"
        android:id="@+id/fg_homescreen_myProperties" />

    <Button
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_below="@id/fg_homescreen_myProperties"
        android:layout_marginRight="@dimen/home_buttons_vertical_margin"
        android:layout_marginBottom="@dimen/home_buttons_horizontal_margin"
        android:drawableTop="@drawable/house"
        android:text="@string/fg_homescreen_profile"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:clickable="true"
        android:background="@drawable/homescreen_button"
        android:id="@+id/fg_homescreen_profile" />

    <Button
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_below="@id/fg_homescreen_sell"
        android:layout_toRightOf="@id/fg_homescreen_myProperties"
        android:layout_marginLeft="@dimen/home_buttons_vertical_margin"
        android:layout_marginBottom="@dimen/home_buttons_horizontal_margin"
        android:drawableTop="@drawable/house"

        android:text="@string/fg_homescreen_favorites"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:background="@drawable/homescreen_button"
        android:id="@+id/fg_homescreen_myFavorites" />

    <Button
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_toRightOf="@id/fg_homescreen_profile"
        android:layout_below="@id/fg_homescreen_myFavorites"
        android:layout_marginLeft="@dimen/home_buttons_vertical_margin"
        android:drawableTop="@drawable/house"
        android:text="@string/fg_homescreen_exit"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:background="@drawable/homescreen_button"
        android:id="@+id/fg_homescreen_exit" />

</RelativeLayout>
